--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 50
-        
+
       - name: Build Project
-        run: zip -r JustDropIt.zip "Data Files"
-  
+        uses: edgarrc/action-7z@v1
+        with:
+          args: 7z a JustDropIt.7z "Data Files"
+   
       - name: Create Release
         uses: notlmn/release-with-changelog@v2
         with:
@@ -29,4 +31,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          files: JustDropIt.zip
+          files: JustDropIt.7z
